Fix badge overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,10 @@ a.badge {
   @apply transition ease-in-out hover:scale-[105%];
 }
 
+.badge {
+  @apply h-min min-h-5 py-[0.05rem];
+}
+
 .prose {
   blockquote {
     @apply max-w-min min-w-fit not-italic;
